Add linting command

--- a/src/brands/alfa-romeo/App.css
+++ b/src/brands/alfa-romeo/App.css
@@ -1,7 +1,6 @@
 @font-face {
-  font-family: 'ApexNewWeb-Light';
-  src: url('../../fonts/ApexNewWeb-Light.woff') format('woff'),
-       url('../../fonts/ApexNewWeb-Light.eot') format('eot');
+	font-family: 'ApexNewWeb-Light';
+	src: url('../../fonts/ApexNewWeb-Light.woff') format('woff'), url('../../fonts/ApexNewWeb-Light.eot') format('eot');
 }
 
 /*
@@ -18,55 +17,57 @@
 ApexNewWeb-Light - Button and main header font
 */
 
-.alfaromeo .btn-primary{
-  background: #8f0c2c;
-  border: 1px solid #8f0c2c;
-  color: #fff;
+.alfaromeo .btn-primary {
+	background: #8f0c2c;
+	border: 1px solid #8f0c2c;
+	color: #fff;
 	text-align: center;
-  outline: none;
+	outline: none;
 }
 
-.alfaromeo .btn-primary:active, .alfaromeo .btn-primary:not([disabled]):not(.disabled):active{
-  background: #8f0c2c;
-  border: 1px solid #8f0c2c;
+.alfaromeo .btn-primary:active,
+.alfaromeo .btn-primary:not([disabled]):not(.disabled):active {
+	background: #8f0c2c;
+	border: 1px solid #8f0c2c;
 }
-.alfaromeo .btn-primary:hover, .alfaromeo .btn-primary:not([disabled]):not(.disabled):hover{
-  background: #7b061b;
-  border: 1px solid #7b061b;
+.alfaromeo .btn-primary:hover,
+.alfaromeo .btn-primary:not([disabled]):not(.disabled):hover {
+	background: #7b061b;
+	border: 1px solid #7b061b;
 }
 
-.alfaromeo .btn-secondary{
-  background: transparent;
-  border: 1px solid #8f0c2c;
-  color: #8f0c2c;
+.alfaromeo .btn-secondary {
+	background: transparent;
+	border: 1px solid #8f0c2c;
+	color: #8f0c2c;
 }
-.alfaromeo .btn-secondary:active, .alfaromeo .btn-secondary:not([disabled]):not(.disabled):active{
-  background: #8f0c2c;
-  border: 1px solid #8f0c2c;
-  color: #fff;
+.alfaromeo .btn-secondary:active,
+.alfaromeo .btn-secondary:not([disabled]):not(.disabled):active {
+	background: #8f0c2c;
+	border: 1px solid #8f0c2c;
+	color: #fff;
 }
-.alfaromeo .btn-secondary:hover, .alfaromeo .btn-secondary:not([disabled]):not(.disabled):hover{
-  background: #7b061b;
-  border: 1px solid #7b061b;
-  color: #fff;
+.alfaromeo .btn-secondary:hover,
+.alfaromeo .btn-secondary:not([disabled]):not(.disabled):hover {
+	background: #7b061b;
+	border: 1px solid #7b061b;
+	color: #fff;
 }
 /* HeaderRow */
-.alfaromeo .main-header{
-    font-family: ApexNewWeb-Light, serif;
+.alfaromeo .main-header {
+	font-family: ApexNewWeb-Light, serif;
 }
-
 
 .alfaromeo .color-info {
-    font-family: Roboto, serif;
-    font-weight: 500;
-    font-style: normal;
+	font-family: Roboto, serif;
+	font-weight: 500;
+	font-style: normal;
 }
 
-
 .alfaromeo .colorInformationsvg circle {
-    fill : #8F0C25;
+	fill: #8f0c25;
 }
 
 .alfaromeo {
-    width:100%;
+	width: 100%;
 }
