--- a/src/brands/chrysler/App.css
+++ b/src/brands/chrysler/App.css
@@ -1,8 +1,8 @@
 @font-face {
-  font-family: 'Novecentowide';
-  src: url('../../fonts/novecentowide-normal-webfont.woff') format('woff'),
-       url('../../fonts/novecentowide-normal-webfont.woff2') format('woff2'),
-       url('../../fonts/Novecentowide-Normal.otf') format('otf');
+	font-family: 'Novecentowide';
+	src: url('../../fonts/novecentowide-normal-webfont.woff') format('woff'),
+		url('../../fonts/novecentowide-normal-webfont.woff2') format('woff2'),
+		url('../../fonts/Novecentowide-Normal.otf') format('otf');
 }
 
 /*
@@ -28,46 +28,52 @@
 ApexNewWeb-Light - Button and main header font
 */
 
-.chrysler .btn-primary{
-  background: #3a57a0;
-  border: 1px solid #3a57a0;
-  color: #fff;
+.chrysler .btn-primary {
+	background: #3a57a0;
+	border: 1px solid #3a57a0;
+	color: #fff;
 	text-align: center;
-  outline: none;
+	outline: none;
 }
 
+.chrysler .btn-primary:active,
+.chrysler .btn-primary:not([disabled]):not(.disabled):active {
+	background: #3a57a0;
+	border: 1px solid #3a57a0;
+}
+.chrysler .btn-primary:hover,
+.chrysler .btn-primary:not([disabled]):not(.disabled):hover {
+	background: #253b74;
+	border: 1px solid #253b74;
+}
 
-.chrysler .btn-primary:active, .chrysler .btn-primary:not([disabled]):not(.disabled):active{
-  background: #3a57a0;
-  border: 1px solid #3a57a0;
+.chrysler .btn-secondary {
+	background: transparent;
+	border: 1px solid #3a57a0;
+	color: #3a57a0;
 }
-.chrysler .btn-primary:hover, .chrysler .btn-primary:not([disabled]):not(.disabled):hover{
-  background: #253b74;
-  border: 1px solid #253b74;
+.chrysler .btn-secondary:active,
+.chrysler .btn-secondary:not([disabled]):not(.disabled):active {
+	background: #3a57a0;
+	border: 1px solid #3a57a0;
+	color: #fff;
 }
-
-.chrysler .btn-secondary{
-  background: transparent;
-  border: 1px solid #3a57a0;
-  color: #3a57a0;
-}
-.chrysler .btn-secondary:active, .chrysler .btn-secondary:not([disabled]):not(.disabled):active{
-  background: #3a57a0;
-  border: 1px solid #3a57a0;
-  color: #fff;
-}
-.chrysler .btn-secondary:hover, .chrysler .btn-secondary:not([disabled]):not(.disabled):hover{
-  background: #253b74;
-  border: 1px solid #253b74;
-  color: #fff;
+.chrysler .btn-secondary:hover,
+.chrysler .btn-secondary:not([disabled]):not(.disabled):hover {
+	background: #253b74;
+	border: 1px solid #253b74;
+	color: #fff;
 }
 /* HeaderRow */
-.chrysler .main-header, .chrysler .btn{
-  font-family: Novecentowide;
+.chrysler .main-header,
+.chrysler .btn {
+	font-family: Novecentowide;
 }
 
 .chrysler .colorInformationsvg circle {
-    fill : #3a57a0;
+	fill: #3a57a0;
 }
 
-.chrysler { width: 100% }
+.chrysler {
+	width: 100%;
+}
