--- a/src/ui/price-calculator/PriceCalculator.css
+++ b/src/ui/price-calculator/PriceCalculator.css
@@ -1,454 +1,465 @@
 .main {
-    padding-top: 90px;
-    padding-bottom: 90px;
-    font-size: 14px;
-    background-color: #FFF;
+	padding-top: 90px;
+	padding-bottom: 90px;
+	font-size: 14px;
+	background-color: #fff;
 }
 
 .bodyComponent .image-price-row > div {
-    padding-top: 20px;
-    padding-bottom: 20px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
-.bodyComponent .dealer > .panel-heading, .bodyComponent .highlights > .panel-heading {
-    padding-bottom: 10px;
+.bodyComponent .dealer > .panel-heading,
+.bodyComponent .highlights > .panel-heading {
+	padding-bottom: 10px;
 }
 
 .btn {
-    border-radius: 2px;
-    padding: 10px 0;
-    width: 270px;
-    max-width: 100%;
-    text-transform: uppercase;
-    font-size: 16px;
-    font-weight: normal;
-    font-family: ApexNewWeb-Light, serif;
+	border-radius: 2px;
+	padding: 10px 0;
+	width: 270px;
+	max-width: 100%;
+	text-transform: uppercase;
+	font-size: 16px;
+	font-weight: normal;
+	font-family: ApexNewWeb-Light, serif;
 }
 
-.btn:focus, .btn:focus {
-    outline: none !important;
-    box-shadow: none !important;
+.btn:focus,
+.btn:focus {
+	outline: none !important;
+	box-shadow: none !important;
 }
 
 .fullwidth-sm {
-    -ms-flex: 0 0 100%;
-    flex: 0 0 100%;
-    max-width: 100%;
+	-ms-flex: 0 0 100%;
+	flex: 0 0 100%;
+	max-width: 100%;
 }
 
 .form-control:focus {
-    border-color: #fff;
+	border-color: #fff;
 }
 
 .header-form .btn {
-    text-transform: uppercase;
-    padding-left: 0;
-    padding-right: 0;
-    text-align: center;
+	text-transform: uppercase;
+	padding-left: 0;
+	padding-right: 0;
+	text-align: center;
 }
 
-.header-form .error, .header-form .warning {
-    position: relative;
-    font-size: 12px;
-    margin-top: 5px;
-    font-weight: bold;
-    white-space: nowrap;
+.header-form .error,
+.header-form .warning {
+	position: relative;
+	font-size: 12px;
+	margin-top: 5px;
+	font-weight: bold;
+	white-space: nowrap;
 }
 
 .header-form .error:before {
-    content: "\E965";
-    font-family: 'icomoon', serif !important;
-    speak: none;
-    line-height: 1;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+	content: "\E965";
+	font-family: 'icomoon', serif !important;
+	speak: none;
+	line-height: 1;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 .header-form .has-error {
-    border: 1px solid #f02222;
+	border: 1px solid #f02222;
 }
 
-.header-form select.form-control:not([size]):not([multiple]), .header-form input.form-control {
-    height: 46px;
-    padding-right: 2.2em
+.header-form select.form-control:not([size]):not([multiple]),
+.header-form input.form-control {
+	height: 46px;
+	padding-right: 2.2em;
 }
 
 .text-danger {
-    color: #f02222;
+	color: #f02222;
 }
 
 .text-danger .cheveron-icon:after {
-    content: '';
-    background-image: url('/icon-information-jeep.svg');
-    background-size: contain;
-    display: inline-block;
-    width: 20px;
-    height: 20px;
+	content: '';
+	background-image: url('/icon-information-jeep.svg');
+	background-size: contain;
+	display: inline-block;
+	width: 20px;
+	height: 20px;
 }
 
 .header-form select {
-    overflow: hidden;
-    overflow: -moz-hidden-unscrollable;
-    background: url('/chevron.svg') no-repeat top 50% right 10px white;
+	overflow: hidden;
+	overflow: -moz-hidden-unscrollable;
+	background: url('/chevron.svg') no-repeat top 50% right 10px white;
 }
 
 .header-form select {
-    appearance: none;
-    -moz-appearance: none; /* Firefox */
-    -webkit-appearance: none; /* Safari and Chrome */
+	appearance: none;
+	-moz-appearance: none; /* Firefox */
+	-webkit-appearance: none; /* Safari and Chrome */
 }
 
 .main .panel-title {
-    font-size: 20px;
-    text-transform: uppercase;
+	font-size: 20px;
+	text-transform: uppercase;
 }
 
 /*Header*/
 .headerRow .btn[type=submit] {
-    width: 100%;
+	width: 100%;
 }
 
 .headerRow label {
-    font-size: 16px;
-    font-weight: 500;
-    font-style: normal;
+	font-size: 16px;
+	font-weight: 500;
+	font-style: normal;
 }
 
 /* BodyComponent layout */
 .image-price-row {
-    margin-bottom: 30px;
+	margin-bottom: 30px;
 }
 
 .image-price-row .vechiclePriceBlock {
-
 }
 
 .vechiclePriceBlock .modelName {
-    font-family: "Roboto", serif;
-    font-weight: 500;
-    font-style: normal;
-    font-size: 30px;
+	font-family: "Roboto", serif;
+	font-weight: 500;
+	font-style: normal;
+	font-size: 30px;
 }
 
 .vechiclePriceBlock .modelDetails {
-    font-family: "Roboto", serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 20px;
+	font-family: "Roboto", serif;
+	font-weight: 400;
+	font-style: normal;
+	font-size: 20px;
 }
 
 .vechiclePriceBlock .modelPrice {
-    font-family: "Roboto", serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 46px;
-    margin-bottom: 30px;
+	font-family: "Roboto", serif;
+	font-weight: 400;
+	font-style: normal;
+	font-size: 46px;
+	margin-bottom: 30px;
 }
 
 .bottomBar .btn {
-    margin: 5px;
+	margin: 5px;
 }
 
 .bottomBar {
-    padding: 45px 0;
-    background: #e7e7e7;
+	padding: 45px 0;
+	background: #e7e7e7;
 }
 
 /*Dealer and Model Highliths*/
 .panel-body h4 {
-    text-transform: uppercase;
-    font-size: 14px;
-    font-family: "Roboto", serif;
-    font-weight: 500;
-    font-style: normal;
-    margin-bottom: 6px;
+	text-transform: uppercase;
+	font-size: 14px;
+	font-family: "Roboto", serif;
+	font-weight: 500;
+	font-style: normal;
+	margin-bottom: 6px;
 }
 
 .panel-body h3 {
-    font-size: 30px;
-    font-family: "Roboto", serif;
-    font-weight: 400;
-    font-style: normal;
-    margin-bottom: 20px;
+	font-size: 30px;
+	font-family: "Roboto", serif;
+	font-weight: 400;
+	font-style: normal;
+	margin-bottom: 20px;
 }
 
-.dealer-title, .highlights-title {
-    margin-top: 0;
+.dealer-title,
+.highlights-title {
+	margin-top: 0;
 }
 
-.pageDisclaimer, .priceDisclaimer , .imageDisclaimer {
-    font-size: 12px;
-    font-style: italic;
-    color: #505050;
+.pageDisclaimer,
+.priceDisclaimer,
+.imageDisclaimer {
+	font-size: 12px;
+	font-style: italic;
+	color: #505050;
 }
 
 .priceDisclaimer {
-    margin-top: 30px;
+	margin-top: 30px;
 }
 
 .pageDisclaimer {
-    margin-top: 60px;
+	margin-top: 60px;
 }
 
 .imageDisclaimer {
-    text-align: right;
-    margin-top: 75px;
-    font-size: 73%;
+	text-align: right;
+	margin-top: 75px;
+	font-size: 73%;
 }
 
 /*General*/
 .border-line {
-    border-bottom: solid 1px #bfbfbf;
+	border-bottom: solid 1px #bfbfbf;
 }
 
 .panel-body {
-    padding: 28px 0;
+	padding: 28px 0;
 }
 
 .panel-body > .well.well-sm {
-    margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 
 ul.highlights-list {
-    padding-left: 20px;
-    font-size: 0.5em;
+	padding-left: 20px;
+	font-size: 0.5em;
 }
 
 ul > li {
-    font-size: 14px;
-    margin-top: .7142rem;
+	font-size: 14px;
+	margin-top: .7142rem;
 }
 
-.panel-body h1, .panel-body h2, .panel-body h3, .panel-body h4, .panel-body h5, .panel-body h6 {
-    margin-bottom: 15px
+.panel-body h1,
+.panel-body h2,
+.panel-body h3,
+.panel-body h4,
+.panel-body h5,
+.panel-body h6 {
+	margin-bottom: 15px;
 }
 
 .colorInformationsvg {
-    position: relative;
-    height : 16px;
-    cursor: pointer;
+	position: relative;
+	height: 16px;
+	cursor: pointer;
 }
 
 .headerRow .colorInformationsvg {
-    top:2px;
-    right:-3px;
-    height: 16px;
+	top: 2px;
+	right: -3px;
+	height: 16px;
 }
 
-
-
-
 .colorInformationsvg text {
-    fill: white;
+	fill: white;
 }
 
 @media (min-width: 1200px) {
-    .autosize-lg {
-        max-width: auto;
-        -ms-flex: initial;
-        flex: initial;
-        padding: 0 0 0 5px;
-        float: left;
-        width: auto;
-    }
+	.autosize-lg {
+		max-width: auto;
+		-ms-flex: initial;
+		flex: initial;
+		padding: 0 0 0 5px;
+		float: left;
+		width: auto;
+	}
 
-    .autosize-lg:first-child {
-        padding: 0;
-    }
+	.autosize-lg:first-child {
+		padding: 0;
+	}
 
-    .container {
-        max-width: 1170px;
-    }
+	.container {
+		max-width: 1170px;
+	}
 
-    .header-form .error, .header-form .warning {
-        position: absolute;
-    }
+	.header-form .error,
+	.header-form .warning {
+		position: absolute;
+	}
 
-    .headerRow .btn[type=submit] {
-        margin-top: 28px;
-    }
+	.headerRow .btn[type=submit] {
+		margin-top: 28px;
+	}
 }
 
 .color-form-group .color-info {
-    position: absolute;
-    top : 0.2em;
-    right: 0.3em;
+	position: absolute;
+	top: 0.2em;
+	right: 0.3em;
 }
 
 @media (max-width: 1200px) {
-    .autosize-lg > div {
-        width: 100% !important;
-    }
+	.autosize-lg > div {
+		width: 100% !important;
+	}
 
-    .autosize-lg {
-        -ms-flex: 0 0 100%;
-        flex: 0 0 100%;
-        max-width: 100%;
-        position: relative;
-        width: 100%;
-        min-height: 1px;
-        padding-right: 15px;
-        padding-left: 15px;
-    }
+	.autosize-lg {
+		-ms-flex: 0 0 100%;
+		flex: 0 0 100%;
+		max-width: 100%;
+		position: relative;
+		width: 100%;
+		min-height: 1px;
+		padding-right: 15px;
+		padding-left: 15px;
+	}
 
-    .autosize-lg.color-form-group > div {
-        width: calc(100% - 40px) !important;
-    }
+	.autosize-lg.color-form-group > div {
+		width: calc(100% - 40px) !important;
+	}
 
-    .autosize-lg.color-form-group .color-info {
-        padding-left: 2px;
-    }
+	.autosize-lg.color-form-group .color-info {
+		padding-left: 2px;
+	}
 
-    .autosize-lg.color-form-group .color-info:after {
-        width: 23px;
-        height: 23px;
-        position: absolute;
-        right: 20px;
-        top: 35px;
-    }
+	.autosize-lg.color-form-group .color-info:after {
+		width: 23px;
+		height: 23px;
+		position: absolute;
+		right: 20px;
+		top: 35px;
+	}
 
-    .header-form input.form-control {
-        width: auto;
-    }
+	.header-form input.form-control {
+		width: auto;
+	}
 
-    .header-form {
-        width: 482px;
-        margin: 0 auto;
-        max-width: 100%;
-    }
+	.header-form {
+		width: 482px;
+		margin: 0 auto;
+		max-width: 100%;
+	}
 }
 
 @media (max-width: 992px) {
-    .bottomBar {
-        padding: 16px;
-    }
+	.bottomBar {
+		padding: 16px;
+	}
 
-    .headerRow {
-        padding: 33px 0;
-    }
+	.headerRow {
+		padding: 33px 0;
+	}
 
-    .btn, .bottomBar .btn {
-        width: 480px;
-        margin: 5px auto;
-        display: block;
-    }
+	.btn,
+	.bottomBar .btn {
+		width: 480px;
+		margin: 5px auto;
+		display: block;
+	}
 
-    .bodyComponent .image-price-row {
-        padding-bottom: 40px;
-    }
+	.bodyComponent .image-price-row {
+		padding-bottom: 40px;
+	}
 
-    .image-price-row, .image-price-row .imageDisclaimer {
-        text-align: center;
-    }
-
-
+	.image-price-row,
+	.image-price-row .imageDisclaimer {
+		text-align: center;
+	}
 }
 
 @media (min-width: 767px) and (max-width: 1200px) {
-    .split-md {
-        float: left;
-        width: 50%;
-    }
+	.split-md {
+		float: left;
+		width: 50%;
+	}
 
-    ul.highlights-list > li {
-        padding-right: 1em;
-        width: 50%;
-        float: left;
-    }
+	ul.highlights-list > li {
+		padding-right: 1em;
+		width: 50%;
+		float: left;
+	}
 }
 
 @media (max-width: 767px) {
-    .main {
-        padding: 40px 0;
-    }
+	.main {
+		padding: 40px 0;
+	}
 }
 
-.close-icon:hover, .color-info:hover {
-    cursor: pointer;
+.close-icon:hover,
+.color-info:hover {
+	cursor: pointer;
 }
 
 h3 {
-    font-weight: bold
+	font-weight: bold;
 }
 
 .well > h4 {
-    margin-bottom: 0.6rem;
+	margin-bottom: 0.6rem;
 }
 
-.form-control::-webkit-input-placeholder { color: #575757; }  /* WebKit, Blink, Edge */
-.form-control:-moz-placeholder { color: #575757; }  /* Mozilla Firefox 4 to 18 */
-.form-control::-moz-placeholder { color: #575757; }  /* Mozilla Firefox 19+ */
-.form-control:-ms-input-placeholder { color: #575757; }  /* Internet Explorer 10-11 */
-.form-control::-ms-input-placeholder { color: #575757; }  /* Microsoft Edge */
-
-
-
+.form-control::-webkit-input-placeholder {
+	color: #575757;
+} /* WebKit, Blink, Edge */
+.form-control:-moz-placeholder {
+	color: #575757;
+} /* Mozilla Firefox 4 to 18 */
+.form-control::-moz-placeholder {
+	color: #575757;
+} /* Mozilla Firefox 19+ */
+.form-control:-ms-input-placeholder {
+	color: #575757;
+} /* Internet Explorer 10-11 */
+.form-control::-ms-input-placeholder {
+	color: #575757;
+} /* Microsoft Edge */
 
 @media (min-width: 1200px) {
-    .bodyComponent .colorInformationsvg {
-        top:1px;
-        right:10px;
-        height:16px;
-    }
-
-
+	.bodyComponent .colorInformationsvg {
+		top: 1px;
+		right: 10px;
+		height: 16px;
+	}
 }
 
 @media (max-width: 1200px) {
-    .headerRow .colorInformationsvg {
-        top: 41px;
-        right: 20px;
-        height: 18px;
-        position: absolute;
-    }
-
-
+	.headerRow .colorInformationsvg {
+		top: 41px;
+		right: 20px;
+		height: 18px;
+		position: absolute;
+	}
 }
 
 @media (max-width: 767px) {
-    .highlights .panel-heading {
-        cursor: pointer;
-        border : none;
-    }
+	.highlights .panel-heading {
+		cursor: pointer;
+		border: none;
+	}
 
-    .highlights {
+	.highlights {
+		border-top: 1px solid #bfbfbf;
+		border-bottom: 1px solid #bfbfbf;
+	}
 
-        border-top: 1px solid #bfbfbf;
-        border-bottom: 1px solid #bfbfbf;
-    }
+	.highlights .panel-heading:before {
+		content: "";
+		position: absolute;
+		width: 20px;
+		height: 20px;
+		right: 25px;
+		top: 20px;
+		background: url("/chevron.svg") no-repeat;
+	}
 
+	.highlights .panel-heading.expanded:before {
+		-moz-transform: rotate(180deg);
+		-webkit-transform: rotate(180deg);
+		-ms-transform: rotate(180deg);
+		transform: rotate(180deg);
+		top: 8px;
+		right: 30px;
+	}
 
-    .highlights .panel-heading:before {
-        content: "";
-        position: absolute;
-        width:20px;
-        height:20px;
-        right:25px;
-        top:20px;
-        background: url("/chevron.svg") no-repeat;
-    }
+	.highlights .panel-heading + .panel-body {
+		display: none;
+	}
 
-    .highlights .panel-heading.expanded:before {
-        -moz-transform: rotate(180deg);
-        -webkit-transform: rotate(180deg);
-        -ms-transform: rotate(180deg);
-        transform: rotate(180deg);
-        top:8px;
-        right:30px;
-    }
+	.highlights .panel-heading {
+		margin-top: 10px;
+	}
+	.highlights .panel-heading.expanded + .panel-body {
+		display: block;
+	}
 
-    .highlights .panel-heading + .panel-body {
-        display:none;
-    }
-
-    .highlights .panel-heading {
-        margin-top:10px;
-    }
-    .highlights .panel-heading.expanded + .panel-body {
-        display:block;
-    }
-
-    .highlights .panel-body {
-        padding:0;
-    }
+	.highlights .panel-body {
+		padding: 0;
+	}
 }
